<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.cloud</groupId>
    <artifactId>cloudsystem</artifactId>
    <packaging>pom</packaging>
    <version>2.0.0-RELEASE</version>
    <modules>
        <module>cloudsystem-network</module>
        <module>cloudsystem-api</module>
        <module>cloudsystem-wrapper</module>
        <module>cloudsystem-plugin</module>
        <module>cloudsystem-base</module>
        <module>cloudsystem-database</module>
        <module>cloudsystem-loader</module>
        <module>cloudsystem-rest</module>
        <module>cloudsystem-modules</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <netty.version>4.1.75.Final</netty.version>
        <nukkit.version>1.0-SNAPSHOT</nukkit.version>
        <waterdog.version>2.0.2</waterdog.version>
        <gson.version>2.11.0</gson.version>
        <lombok.version>1.18.34</lombok.version>
        <jannotations.version>24.1.0</jannotations.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.cloud</groupId>
                <artifactId>cloudsystem-api</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.16.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>de.cloud</groupId>
                <artifactId>cloudsystem-network</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-transport-native-epoll</artifactId>
                <version>${netty.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-codec</artifactId>
                <version>${netty.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${jannotations.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
